# life-insurance-case

./: .gitignore  Dockerfile  README.md  pyproject.toml
analysis/: main.ipynb
analysis/utils/: age.py  health.py  plots.py  stats.py
